# alsa_lame_pcm_2_mp3

./: CMakeLists.txt  README.md
include/: ALSA_AUDIO_CAPTURE.h  Alsa_AUDIO_CAPTURE.h~  Lame_pcm2mp3.h~
src/: ALSA_AUDIO_CAPTURE.c  Alsa_AUDIO_CAPTURE.c~  Lame_pcm2mp3.c~  testpcm2mp3.c  testpcm2mp3.cpp~
